<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mainmenu_gradient"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="258dp"
            android:layout_height="250dp"
            app:srcCompat="@drawable/_logo_"
            android:contentDescription="@string/todo"></ImageView>

        <TextView
            android:id="@+id/textView_mainMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:textColor="#FFFF"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="-20dp"
            />

        <TextView
            android:id="@+id/textView_locationCaution"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textColor="#757577"
            android:textSize="12sp"
            android:text =  "@string/fuck1"/>


        <AutoCompleteTextView
            android:id="@+id/actv_county"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/what_county_do_you_live_in"
            android:completionThreshold="2"
            android:padding="5dp"
            android:textSize="25sp"
            android:gravity="center"
            android:textColorHint="#FFF"
            android:textColor="#000"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/fuck"
            android:textColor="#757577"
            android:textSize="10sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:foregroundGravity="center"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <Button
                android:id="@+id/welcome_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/click_here_to_go_to_risk_assessment_form"
                android:textColor="#fff" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            android:foregroundGravity="center"
            app:cardElevation="10dp">

            <Button
                android:id="@+id/display_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/click_here_to_go_to_the_display"
                android:textColor="#FFF" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>